# titan10-codes

./: LICENSE  README.md
kirikei/: README.md  bi_service_details_gemini.json  bi_service_recall_know_gemini.json  bi_service_scores_gemini.json  bi_services.json  details_services.py  pyproject.toml  recall_services.py  scrape.py  search.py  search_results.json  top_services.py
